@@ -390,9 +390,9 @@ To save files to a specific path:
 
   rake state_machine:draw FILE=vehicle.rb CLASS=Vehicle TARGET=files
 
-To customize the image format:
+To customize the image format / orientation:
 
-  rake state_machine:draw FILE=vehicle.rb CLASS=Vehicle FORMAT=jpg
+  rake state_machine:draw FILE=vehicle.rb CLASS=Vehicle FORMAT=jpg ORIENTATION=landscape
 
 To generate multiple state machine graphs:
 
