@@ -1,5 +1,6 @@
 == master
 
+* Add support for customizing the graph's orientation
 * Use the standard visualizations for initial (open arrow) and final (double circle) states
 * Highlight final states in GraphViz drawings
 
